--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -3,14 +3,14 @@
 
 <h1>Profile</h1>
 <div>
-   <p>user.name</p>
-   <p>user.username</p>
-   <p>user.phone</p>
-   <p>user.email</p>
-   <p>user.address</p>
+   <p><%= user.name %></p>
+   <p><%= user.username %></p>
+   <p><%= user.phone %></p>
+   <p><%= user.email %></p>
+   <p><%= user.address %></p>
 </div>
 <br>
-<a href="/" class="href">Back to Account Summary</a>
+<a href="/">Back to Account Summary</a>
 
 
 <%- include('footer') %>
